--- a/index.html
+++ b/index.html
@@ -3,111 +3,147 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>RINUO Brand Showcase</title>
+<title>RINUO Brand Banner</title>
 <style>
-  body {
-    margin: 0;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
-    background: #f0f2f5;
-    color: #333;
-  }
-
+  body, html { margin: 0; padding: 0; height: 100%; font-family: 'Helvetica Neue', Arial, sans-serif; overflow-x: hidden;}
   header {
-    background: linear-gradient(135deg, #4f9cf9, #1f5cbe);
-    color: white;
-    text-align: center;
-    padding: 120px 20px;
     position: relative;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(135deg, #4f9cf9, #1f5cbe);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
     overflow: hidden;
   }
-
-  /* Logo */
+  /* 粒子画布 */
+  #particles {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    z-index: 0;
+  }
   .logo {
-    width: 100px;
-    height: 100px;
-    margin: 0 auto 20px;
-    background: url('https://via.placeholder.com/100x100.png?text=R') no-repeat center/contain;
+    width: 120px;
+    height: 120px;
+    background: url('https://via.placeholder.com/120x120.png?text=R') no-repeat center/contain;
     border-radius: 50%;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-    animation: logoBounce 1.5s ease infinite alternate;
+    box-shadow: 0 0 30px rgba(255,255,255,0.6), 0 0 60px rgba(255,255,255,0.4);
+    position: relative;
+    z-index: 1;
+    animation: logoGlow 2s ease-in-out infinite alternate;
   }
-
-  @keyframes logoBounce {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-15px); }
+  @keyframes logoGlow {
+    0% { transform: scale(1); box-shadow: 0 0 20px rgba(255,255,255,0.6), 0 0 40px rgba(255,255,255,0.4);}
+    100% { transform: scale(1.1); box-shadow: 0 0 40px rgba(255,255,255,0.8), 0 0 80px rgba(255,255,255,0.6);}
   }
-
-  header h1 {
-    font-size: 3rem;
-    margin: 0 0 40px;
-    letter-spacing: 5px;
-    text-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  h1 {
+    margin: 20px 0 40px;
+    font-size: 4rem;
+    letter-spacing: 8px;
+    text-shadow: 0 2px 15px rgba(0,0,0,0.3);
+    z-index: 1;
+    position: relative;
   }
-
   .slogans {
     display: flex;
     flex-direction: column;
     gap: 20px;
     align-items: center;
+    z-index: 1;
+    position: relative;
   }
-
   .slogan {
-    background: rgba(255,255,255,0.1);
-    padding: 12px 25px;
-    border-radius: 12px;
-    font-size: 1.6rem;
-    font-weight: 500;
-    cursor: default;
+    font-size: 2rem;
+    font-weight: 600;
     opacity: 0;
-    transform: translateY(20px);
-    animation: fadeInUp 0.8s forwards;
+    transform: translateY(30px);
+    animation: fadeUp 1s forwards;
+    cursor: default;
   }
-
-  .slogan:nth-child(1) { animation-delay: 0.2s; }
-  .slogan:nth-child(2) { animation-delay: 0.4s; }
-  .slogan:nth-child(3) { animation-delay: 0.6s; }
-  .slogan:nth-child(4) { animation-delay: 0.8s; }
-  .slogan:nth-child(5) { animation-delay: 1s; }
-
-  .slogan:hover {
-    transform: scale(1.15);
-    background: rgba(255,255,255,0.25);
-    transition: all 0.3s ease;
-  }
-
-  @keyframes fadeInUp {
+  .slogan:nth-child(1){ animation-delay: 0.3s; }
+  .slogan:nth-child(2){ animation-delay: 0.6s; }
+  .slogan:nth-child(3){ animation-delay: 0.9s; }
+  .slogan:nth-child(4){ animation-delay: 1.2s; }
+  .slogan:nth-child(5){ animation-delay: 1.5s; }
+  .slogan:hover { color: #fffb7d; transform: scale(1.2); transition: all 0.3s ease; }
+  @keyframes fadeUp {
     to { opacity: 1; transform: translateY(0); }
   }
-
   footer {
     text-align: center;
-    padding: 40px 20px;
+    padding: 20px;
     font-size: 0.9rem;
-    color: #666;
-    background: #f8f8f8;
+    color: #ccc;
+    background: #111;
   }
-
-  @media (max-width: 600px) {
-    header h1 { font-size: 2.2rem; }
+  @media (max-width: 600px){
+    h1 { font-size: 2.2rem; letter-spacing: 3px;}
     .slogan { font-size: 1.2rem; }
     .logo { width: 80px; height: 80px; }
   }
 </style>
 </head>
 <body>
-  <header>
-    <div class="logo"></div>
-    <h1>RINUO</h1>
-    <div class="slogans">
-      <div class="slogan">Real Innovation</div>
-      <div class="slogan">Rise & Own</div>
-      <div class="slogan">Reach New</div>
-      <div class="slogan">Trust. Act.</div>
-      <div class="slogan">Simply Reliable</div>
-    </div>
-  </header>
-  <footer>
-    © 2025 RINUO. All rights reserved.
-  </footer>
+<header>
+  <canvas id="particles"></canvas>
+  <div class="logo"></div>
+  <h1>RINUO</h1>
+  <div class="slogans">
+    <div class="slogan">Real Innovation</div>
+    <div class="slogan">Rise & Own</div>
+    <div class="slogan">Reach New</div>
+    <div class="slogan">Trust. Act.</div>
+    <div class="slogan">Simply Reliable</div>
+  </div>
+</header>
+<footer>© 2025 RINUO. All rights reserved.</footer>
+
+<script>
+// 简单微粒子背景
+const canvas = document.getElementById('particles');
+const ctx = canvas.getContext('2d');
+let w = canvas.width = window.innerWidth;
+let h = canvas.height = window.innerHeight;
+const particles = [];
+const numParticles = 80;
+
+function Particle(){
+  this.x = Math.random()*w;
+  this.y = Math.random()*h;
+  this.r = Math.random()*2+1;
+  this.speedX = (Math.random()-0.5)*0.5;
+  this.speedY = (Math.random()-0.5)*0.5;
+  this.alpha = Math.random()*0.5+0.2;
+}
+Particle.prototype.update = function(){
+  this.x += this.speedX;
+  this.y += this.speedY;
+  if(this.x<0||this.x>w) this.speedX*=-1;
+  if(this.y<0||this.y>h) this.speedY*=-1;
+}
+Particle.prototype.draw = function(){
+  ctx.beginPath();
+  ctx.arc(this.x, this.y, this.r, 0, Math.PI*2);
+  ctx.fillStyle = `rgba(255,255,255,${this.alpha})`;
+  ctx.fill();
+}
+
+for(let i=0;i<numParticles;i++){ particles.push(new Particle()); }
+
+function animate(){
+  ctx.clearRect(0,0,w,h);
+  particles.forEach(p=>{ p.update(); p.draw(); });
+  requestAnimationFrame(animate);
+}
+animate();
+
+window.addEventListener('resize',()=>{
+  w = canvas.width = window.innerWidth;
+  h = canvas.height = window.innerHeight;
+});
+</script>
 </body>
-</html>in
+</html>
