Brand model index.html

--- a/index.html
+++ b/index.html
@@ -3,92 +3,115 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>RINUO Brand Banner</title>
+<title>RINUO - Brand Banner</title>
 <style>
-  body, html { margin: 0; padding: 0; height: 100%; font-family: 'Helvetica Neue', Arial, sans-serif; overflow-x: hidden;}
-  header {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    background: linear-gradient(135deg, #4f9cf9, #1f5cbe);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    overflow: hidden;
-  }
-  /* 粒子画布 */
-  #particles {
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    z-index: 0;
-  }
-  .logo {
-    width: 120px;
-    height: 120px;
-    background: url('https://via.placeholder.com/120x120.png?text=R') no-repeat center/contain;
-    border-radius: 50%;
-    box-shadow: 0 0 30px rgba(255,255,255,0.6), 0 0 60px rgba(255,255,255,0.4);
-    position: relative;
-    z-index: 1;
-    animation: logoGlow 2s ease-in-out infinite alternate;
-  }
-  @keyframes logoGlow {
-    0% { transform: scale(1); box-shadow: 0 0 20px rgba(255,255,255,0.6), 0 0 40px rgba(255,255,255,0.4);}
-    100% { transform: scale(1.1); box-shadow: 0 0 40px rgba(255,255,255,0.8), 0 0 80px rgba(255,255,255,0.6);}
-  }
-  h1 {
-    margin: 20px 0 40px;
-    font-size: 4rem;
-    letter-spacing: 8px;
-    text-shadow: 0 2px 15px rgba(0,0,0,0.3);
-    z-index: 1;
-    position: relative;
-  }
-  .slogans {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-    z-index: 1;
-    position: relative;
-  }
-  .slogan {
-    font-size: 2rem;
-    font-weight: 600;
-    opacity: 0;
-    transform: translateY(30px);
-    animation: fadeUp 1s forwards;
-    cursor: default;
-  }
-  .slogan:nth-child(1){ animation-delay: 0.3s; }
-  .slogan:nth-child(2){ animation-delay: 0.6s; }
-  .slogan:nth-child(3){ animation-delay: 0.9s; }
-  .slogan:nth-child(4){ animation-delay: 1.2s; }
-  .slogan:nth-child(5){ animation-delay: 1.5s; }
-  .slogan:hover { color: #fffb7d; transform: scale(1.2); transition: all 0.3s ease; }
-  @keyframes fadeUp {
-    to { opacity: 1; transform: translateY(0); }
-  }
-  footer {
-    text-align: center;
-    padding: 20px;
-    font-size: 0.9rem;
-    color: #ccc;
-    background: #111;
-  }
-  @media (max-width: 600px){
-    h1 { font-size: 2.2rem; letter-spacing: 3px;}
-    .slogan { font-size: 1.2rem; }
-    .logo { width: 80px; height: 80px; }
-  }
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+  overflow-x: hidden;
+  background: #0a0a0a;
+}
+
+/* header */
+header {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+/* 背景粒子画布 */
+#particles, #glowParticles {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+/* Logo */
+.logo {
+  width: 140px;
+  height: 140px;
+  background: url('https://via.placeholder.com/140x140.png?text=R') no-repeat center/contain;
+  border-radius: 50%;
+  position: relative;
+  z-index: 2;
+  box-shadow: 0 0 30px #fff, 0 0 60px #4f9cf9;
+  animation: logoGlow 2s ease-in-out infinite alternate;
+}
+@keyframes logoGlow {
+  0% { transform: scale(1); box-shadow: 0 0 30px #fff,0 0 60px #4f9cf9; }
+  100% { transform: scale(1.15); box-shadow: 0 0 60px #fff,0 0 120px #4f9cf9; }
+}
+
+h1 {
+  margin: 20px 0;
+  font-size: 4rem;
+  letter-spacing: 8px;
+  text-shadow: 0 2px 20px rgba(0,0,0,0.5);
+  z-index: 2;
+  position: relative;
+}
+
+/* Slogans */
+.slogans {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  z-index: 2;
+  position: relative;
+}
+.slogan {
+  font-size: 2rem;
+  font-weight: 700;
+  opacity: 0;
+  transform: translateY(40px);
+  animation: fadeUp 1s forwards;
+  cursor: default;
+  background: linear-gradient(90deg,#fff,#4f9cf9,#fffb7d);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.slogan:nth-child(1){ animation-delay: 0.3s;}
+.slogan:nth-child(2){ animation-delay: 0.6s;}
+.slogan:nth-child(3){ animation-delay: 0.9s;}
+.slogan:nth-child(4){ animation-delay: 1.2s;}
+.slogan:nth-child(5){ animation-delay: 1.5s;}
+.slogan:hover { transform: scale(1.2) translateY(-5px); transition: all 0.4s ease; }
+
+@keyframes fadeUp {
+  to { opacity: 1; transform: translateY(0); }
+}
+
+footer {
+  text-align: center;
+  padding: 20px;
+  font-size: 0.9rem;
+  color: #ccc;
+  background: #111;
+}
+
+/* 响应式 */
+@media (max-width: 600px){
+  h1 { font-size: 2.2rem; letter-spacing: 3px; }
+  .slogan { font-size: 1.2rem; }
+  .logo { width: 90px; height: 90px; }
+}
 </style>
 </head>
 <body>
 <header>
   <canvas id="particles"></canvas>
+  <canvas id="glowParticles"></canvas>
   <div class="logo"></div>
   <h1>RINUO</h1>
   <div class="slogans">
@@ -102,47 +125,58 @@
 <footer>© 2025 RINUO. All rights reserved.</footer>
 
 <script>
-// 简单微粒子背景
+// 粒子背景
 const canvas = document.getElementById('particles');
 const ctx = canvas.getContext('2d');
-let w = canvas.width = window.innerWidth;
-let h = canvas.height = window.innerHeight;
+const glowCanvas = document.getElementById('glowParticles');
+const glowCtx = glowCanvas.getContext('2d');
+
+let w = canvas.width = glowCanvas.width = window.innerWidth;
+let h = canvas.height = glowCanvas.height = window.innerHeight;
+
 const particles = [];
-const numParticles = 80;
-
-function Particle(){
-  this.x = Math.random()*w;
-  this.y = Math.random()*h;
-  this.r = Math.random()*2+1;
-  this.speedX = (Math.random()-0.5)*0.5;
-  this.speedY = (Math.random()-0.5)*0.5;
-  this.alpha = Math.random()*0.5+0.2;
+const numParticles = 120;
+for(let i=0;i<numParticles;i++){
+  particles.push({
+    x: Math.random()*w,
+    y: Math.random()*h,
+    r: Math.random()*2+1,
+    speedX: (Math.random()-0.5)*0.7,
+    speedY: (Math.random()-0.5)*0.7,
+    alpha: Math.random()*0.5+0.2
+  });
 }
-Particle.prototype.update = function(){
-  this.x += this.speedX;
-  this.y += this.speedY;
-  if(this.x<0||this.x>w) this.speedX*=-1;
-  if(this.y<0||this.y>h) this.speedY*=-1;
-}
-Particle.prototype.draw = function(){
-  ctx.beginPath();
-  ctx.arc(this.x, this.y, this.r, 0, Math.PI*2);
-  ctx.fillStyle = `rgba(255,255,255,${this.alpha})`;
-  ctx.fill();
-}
-
-for(let i=0;i<numParticles;i++){ particles.push(new Particle()); }
 
 function animate(){
   ctx.clearRect(0,0,w,h);
-  particles.forEach(p=>{ p.update(); p.draw(); });
+  glowCtx.clearRect(0,0,w,h);
+
+  particles.forEach(p=>{
+    p.x += p.speedX;
+    p.y += p.speedY;
+    if(p.x<0||p.x>w) p.speedX*=-1;
+    if(p.y<0||p.y>h) p.speedY*=-1;
+
+    // 背景粒子
+    ctx.beginPath();
+    ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
+    ctx.fillStyle = `rgba(255,255,255,${p.alpha})`;
+    ctx.fill();
+
+    // 发光粒子
+    glowCtx.beginPath();
+    glowCtx.arc(p.x,p.y,p.r*2,0,Math.PI*2);
+    glowCtx.fillStyle = `rgba(79,156,249,${p.alpha*0.6})`;
+    glowCtx.fill();
+  });
+
   requestAnimationFrame(animate);
 }
 animate();
 
 window.addEventListener('resize',()=>{
-  w = canvas.width = window.innerWidth;
-  h = canvas.height = window.innerHeight;
+  w = canvas.width = glowCanvas.width = window.innerWidth;
+  h = canvas.height = glowCanvas.height = window.innerHeight;
 });
 </script>
 </body>
