--- a/index.html
+++ b/index.html
@@ -220,5 +220,6 @@ window.addEventListener('resize',()=>{
   h = canvas.height = glowCanvas.height = trailCanvas.height = window.innerHeight;
 });
 </script>
+<script src="https://guomengtao.github.io/gaoxueya-com/scripts/stats.js?domain=www.rinuo.com&v=20250801"></script>
 </body>
 </html>
