--- a/index.html
+++ b/index.html
@@ -220,6 +220,6 @@ window.addEventListener('resize',()=>{
   h = canvas.height = glowCanvas.height = trailCanvas.height = window.innerHeight;
 });
 </script>
-<script src="https://www.gaoxueya.com/scripts/stats.js?domain=www.rinuo.com&v=20250801"></script>
+<script type="module" src="https://www.gaoxueya.com/scripts/stats.js?domain=www.rinuo.com&v=20250801"></script>
 </body>
 </html>
