--- a/jp.html
+++ b/jp.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+、<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -24,6 +24,16 @@
 </head>
 <body class="bg-gradient-to-br from-blue-50 to-purple-50 min-h-screen">
     <div class="container mx-auto px-4 py-8">
+
+        <!-- 播放控制栏 -->
+        <div class="flex justify-center gap-2 mb-4">
+            <span class="font-semibold text-gray-700 self-center">播放速度：</span>
+            <button onclick="setSpeed(0.6)" class="bg-gray-200 px-3 py-1 rounded hover:bg-gray-300">慢速</button>
+            <button onclick="setSpeed(0.8)" class="bg-gray-200 px-3 py-1 rounded hover:bg-gray-300">正常</button>
+            <button onclick="setSpeed(1.2)" class="bg-gray-200 px-3 py-1 rounded hover:bg-gray-300">快速</button>
+            <span class="ml-4 font-semibold text-gray-700 self-center">循环播放：</span>
+            <button id="loopBtn" onclick="toggleLoop()" class="bg-gray-200 px-3 py-1 rounded hover:bg-gray-300">关闭</button>
+        </div>
 
         <!-- 搜索条 -->
         <div class="flex justify-center gap-2 mb-6">
@@ -70,12 +80,13 @@
         ];
 
         const container = document.getElementById('gridContainer');
+        let speechRate = 0.8;  // 初始速度
+        let loopMode = false;
 
         function renderAnimals(list) {
             container.innerHTML = '';
             list.forEach(animal => {
                 const cdnImage = `https://images.weserv.nl/?url=${encodeURIComponent(animal.image)}&w=300&h=300&fit=cover`;
-
                 const card = document.createElement('div');
                 card.className = 'animal-card bg-white rounded-xl overflow-hidden shadow-md cursor-pointer';
                 card.innerHTML = `
@@ -92,35 +103,9 @@
                 `;
                 
                 card.addEventListener('click', () => {
-                    speakJapanese(animal.japanese);
+                    playAnimal(animal);
                     card.classList.add('animate-pulse');
                     setTimeout(() => card.classList.remove('animate-pulse'), 300);
                 });
 
                 container.appendChild(card);
-            });
-        }
-
-        function speakJapanese(text) {
-            const utterance = new SpeechSynthesisUtterance();
-            utterance.text = text;
-            utterance.lang = 'ja-JP';
-            utterance.rate = 0.8;
-            speechSynthesis.speak(utterance);
-        }
-
-        function searchAnimal() {
-            const keyword = document.getElementById('searchInput').value.trim().toLowerCase();
-            if (!keyword) {
-                renderAnimals(animals);
-                return;
-            }
-            const filtered = animals.filter(a => a.name.includes(keyword) || a.japanese.includes(keyword));
-            renderAnimals(filtered);
-        }
-
-        // 初始渲染
-        renderAnimals(animals);
-    </script>
-</body>
-</html>
