--- a/jp.html
+++ b/jp.html
@@ -1,111 +1,91 @@
-、<!DOCTYPE html>
-<html lang="zh-CN">
+<!DOCTYPE html>
+<html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>日语动物学习卡</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        .animal-card {
-            transition: all 0.3s ease;
-        }
-        .animal-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
-        }
-        .speaker-icon {
-            transition: all 0.2s ease;
-        }
-        .animal-card:hover .speaker-icon {
-            color: #3b82f6;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>日语动物学习卡 - 图标版</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<style>
+  .animal-card { transition: all 0.3s ease; }
+  .animal-card:hover { transform: translateY(-5px); box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1); }
+  .speaker-icon { transition: all 0.2s ease; }
+  .animal-card:hover .speaker-icon { color: #3b82f6; }
+</style>
 </head>
 <body class="bg-gradient-to-br from-blue-50 to-purple-50 min-h-screen">
-    <div class="container mx-auto px-4 py-8">
+<div class="container mx-auto px-4 py-8">
+  <header class="text-center mb-6">
+    <h1 class="text-4xl font-bold text-indigo-700 mb-2">日语动物学习卡</h1>
+    <input id="searchInput" type="text" placeholder="搜索动物..." class="border rounded px-3 py-2 w-full max-w-md mx-auto mb-4" oninput="onSearch()">
+    <p class="text-gray-600">点击图标学习日语发音</p>
+  </header>
 
-        <!-- 播放控制栏 -->
-        <div class="flex justify-center gap-2 mb-4">
-            <span class="font-semibold text-gray-700 self-center">播放速度：</span>
-            <button onclick="setSpeed(0.6)" class="bg-gray-200 px-3 py-1 rounded hover:bg-gray-300">慢速</button>
-            <button onclick="setSpeed(0.8)" class="bg-gray-200 px-3 py-1 rounded hover:bg-gray-300">正常</button>
-            <button onclick="setSpeed(1.2)" class="bg-gray-200 px-3 py-1 rounded hover:bg-gray-300">快速</button>
-            <span class="ml-4 font-semibold text-gray-700 self-center">循环播放：</span>
-            <button id="loopBtn" onclick="toggleLoop()" class="bg-gray-200 px-3 py-1 rounded hover:bg-gray-300">关闭</button>
+  <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6" id="animalGrid">
+    <!-- 动物卡片动态生成 -->
+  </div>
+</div>
+
+<footer class="text-center py-6 text-gray-500 text-sm">
+  <p>© 2025 日语学习工具 - 点击图标听发音</p>
+</footer>
+
+<script>
+  // 初始动物列表（对应日语名称）
+  const defaultAnimals = [
+    { name: "猫", japanese: "ねこ", icon: "fa-solid/cat" },
+    { name: "犬", japanese: "いぬ", icon: "fa-solid/dog" },
+    { name: "熊", japanese: "くま", icon: "fa-solid/bear" },
+    { name: "兔", japanese: "うさぎ", icon: "fa-solid/rabbit" },
+    { name: "狐狸", japanese: "きつね", icon: "fa-solid/fox" },
+    { name: "老虎", japanese: "とら", icon: "fa-solid/tiger" }
+  ];
+
+  const grid = document.getElementById('animalGrid');
+
+  function renderAnimals(list) {
+    grid.innerHTML = '';
+    list.forEach(animal => {
+      const card = document.createElement('div');
+      card.className = 'animal-card bg-white rounded-xl overflow-hidden shadow-md cursor-pointer text-center p-4';
+      card.innerHTML = `
+        <div class="relative flex justify-center items-center h-24">
+          <img src="https://api.iconify.design/${animal.icon}.svg?color=%233b82f6&width=80&height=80" alt="${animal.name}" class="w-20 h-20">
+          <div class="absolute bottom-2 right-2 bg-white rounded-full p-2 shadow-md speaker-icon">
+            <i class="fas fa-volume-up text-gray-400"></i>
+          </div>
         </div>
+        <h3 class="font-semibold text-lg text-gray-800 mt-2">${animal.name}</h3>
+        <p class="text-indigo-600 mt-1">${animal.japanese}</p>
+      `;
+      card.addEventListener('click', () => speakJapanese(animal.japanese));
+      grid.appendChild(card);
+    });
+  }
 
-        <!-- 搜索条 -->
-        <div class="flex justify-center gap-2 mb-6">
-            <input id="searchInput" type="text" placeholder="搜索动物/日语" class="border p-2 rounded w-64">
-            <button onclick="searchAnimal()" class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">搜索</button>
-        </div>
+  function speakJapanese(text) {
+    const utterance = new SpeechSynthesisUtterance();
+    utterance.text = text;
+    utterance.lang = 'ja-JP';
+    utterance.rate = 0.8;
+    speechSynthesis.speak(utterance);
+  }
 
-        <header class="text-center mb-6">
-            <h1 class="text-4xl font-bold text-indigo-700 mb-2">日语动物学习卡</h1>
-            <p class="text-gray-600">点击动物图片学习日语发音</p>
-        </header>
+  // 搜索功能，匹配默认列表
+  function onSearch() {
+    const query = document.getElementById('searchInput').value.trim();
+    if (!query) {
+      renderAnimals(defaultAnimals);
+      return;
+    }
+    const filtered = defaultAnimals.filter(a =>
+      a.name.includes(query) || a.japanese.includes(query)
+    );
+    renderAnimals(filtered);
+  }
 
-        <div id="gridContainer" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6">
-            <!-- 动物卡片通过 JS 生成 -->
-        </div>
-    </div>
-
-    <footer class="text-center py-6 text-gray-500 text-sm">
-        <p>© 2025 日语学习工具 - 点击动物图片听发音</p>
-    </footer>
-
-    <script>
-        const animals = [
-            { name: "猫", japanese: "ねこ", image: "https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492_640.jpg" },
-            { name: "犬", japanese: "いぬ", image: "https://cdn.pixabay.com/photo/2016/12/13/05/15/puppy-1903313_640.jpg" },
-            { name: "熊", japanese: "くま", image: "https://cdn.pixabay.com/photo/2016/03/27/22/22/bear-1284377_640.jpg" },
-            { name: "兔", japanese: "うさぎ", image: "https://cdn.pixabay.com/photo/2017/04/02/22/36/easter-2197043_640.jpg" },
-            { name: "狐狸", japanese: "きつね", image: "https://cdn.pixabay.com/photo/2017/07/24/19/57/fox-2536662_640.jpg" },
-            { name: "熊猫", japanese: "パンダ", image: "https://cdn.pixabay.com/photo/2016/03/04/22/54/panda-1236875_640.jpg" },
-            { name: "老虎", japanese: "とら", image: "https://cdn.pixabay.com/photo/2017/07/24/19/57/tiger-2536663_640.jpg" },
-            { name: "狮子", japanese: "ライオン", image: "https://cdn.pixabay.com/photo/2016/12/04/21/58/lion-1882729_640.jpg" },
-            { name: "大象", japanese: "ぞう", image: "https://cdn.pixabay.com/photo/2016/11/14/04/45/elephant-1822636_640.jpg" },
-            { name: "长颈鹿", japanese: "キリン", image: "https://cdn.pixabay.com/photo/2016/11/29/03/36/giraffe-1867270_640.jpg" },
-            { name: "猴子", japanese: "さる", image: "https://cdn.pixabay.com/photo/2017/09/10/09/56/monkey-2734099_640.jpg" },
-            { name: "考拉", japanese: "コアラ", image: "https://cdn.pixabay.com/photo/2016/03/27/19/43/koala-1283971_640.jpg" },
-            { name: "企鹅", japanese: "ペンギン", image: "https://cdn.pixabay.com/photo/2016/12/31/16/52/penguin-1943313_640.jpg" },
-            { name: "河马", japanese: "カバ", image: "https://cdn.pixabay.com/photo/2016/11/14/05/21/hippopotamus-1822638_640.jpg" },
-            { name: "犀牛", japanese: "サイ", image: "https://cdn.pixabay.com/photo/2016/11/14/05/21/rhino-1822637_640.jpg" },
-            { name: "斑马", japanese: "シマウマ", image: "https://cdn.pixabay.com/photo/2016/11/22/23/44/pregnant-1851246_640.jpg" },
-            { name: "松鼠", japanese: "リス", image: "https://cdn.pixabay.com/photo/2018/05/21/20/42/squirrel-3419923_640.jpg" },
-            { name: "刺猬", japanese: "ハリネズミ", image: "https://cdn.pixabay.com/photo/2017/06/09/17/39/hedgehog-2387999_640.jpg" },
-            { name: "乌龟", japanese: "かめ", image: "https://cdn.pixabay.com/photo/2017/05/31/15/34/turtle-2361113_640.jpg" },
-            { name: "鳄鱼", japanese: "ワニ", image: "https://cdn.pixabay.com/photo/2016/11/29/06/15/alligator-1867880_640.jpg" }
-        ];
-
-        const container = document.getElementById('gridContainer');
-        let speechRate = 0.8;  // 初始速度
-        let loopMode = false;
-
-        function renderAnimals(list) {
-            container.innerHTML = '';
-            list.forEach(animal => {
-                const cdnImage = `https://images.weserv.nl/?url=${encodeURIComponent(animal.image)}&w=300&h=300&fit=cover`;
-                const card = document.createElement('div');
-                card.className = 'animal-card bg-white rounded-xl overflow-hidden shadow-md cursor-pointer';
-                card.innerHTML = `
-                    <div class="relative">
-                        <img src="${cdnImage}" alt="${animal.name}" class="w-full h-40 object-cover">
-                        <div class="absolute bottom-2 right-2 bg-white rounded-full p-2 shadow-md speaker-icon">
-                            <i class="fas fa-volume-up text-gray-400"></i>
-                        </div>
-                    </div>
-                    <div class="p-4">
-                        <h3 class="font-semibold text-lg text-gray-800">${animal.name}</h3>
-                        <p class="text-indigo-600 mt-1">${animal.japanese}</p>
-                    </div>
-                `;
-                
-                card.addEventListener('click', () => {
-                    playAnimal(animal);
-                    card.classList.add('animate-pulse');
-                    setTimeout(() => card.classList.remove('animate-pulse'), 300);
-                });
-
-                container.appendChild(card);
+  // 页面初始渲染
+  renderAnimals(defaultAnimals);
+</script>
+</body>
+</html>
