--- a/jp.html
+++ b/jp.html
@@ -58,12 +58,19 @@ const animals = [
   { name: "狐狸", japanese: "きつね", icon: "emojione-v1:fox-face" }
 ];
 
-// 多源图标加载
+// 10个图标源
 async function loadIcon(iconName) {
   const sources = [
     { url: `https://api.iconify.design/${iconName}.svg`, label: "Iconify API" },
     { url: `https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir/icons/${iconName}.svg`, label: "Iconoir CDN" },
-    { url: `https://cdn.materialdesignicons.com/6.5.95/svg/${iconName}.svg`, label: "MaterialDesign CDN" }
+    { url: `https://cdn.materialdesignicons.com/6.5.95/svg/${iconName}.svg`, label: "MaterialDesign CDN" },
+    { url: `https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/${iconName}.svg`, label: "Twemoji" },
+    { url: `https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/${iconName}.svg`, label: "Simple Icons" },
+    { url: `https://unpkg.com/@icon-park/svg@latest/icons/${iconName}.svg`, label: "IconPark" },
+    { url: `https://raw.githubusercontent.com/primer/octicons/main/icons/${iconName}.svg`, label: "Octicons" },
+    { url: `https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/svgs/solid/${iconName}.svg`, label: "FontAwesome" },
+    { url: `https://cdn.jsdelivr.net/gh/feathericons/feather/icons/${iconName}.svg`, label: "Feather Icons" },
+    { url: `https://api.iconhub.io/api/icon/${iconName}.svg`, label: "IconHub" }
   ];
   for (let source of sources) {
     try {
